bin/testsuite/tests/compiler/src/errors/compiler4911.swg
#global testerror "Err0344"

#[Swag.Mixin]
func toto()
{
    var #alias: s32
    #alias += 1
}

#test
{
    toto()
}